// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SitesGridItem> Custom render 1`] = `
<div
  className="css-lvc9r-container"
>
  <a
    className="css-1ctre4x-ThumbnailLink e19s2eol0"
    href="/home/test_slug"
    title="Visit Dashboard"
  >
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </a>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-jjnk6s-SiteName esmj6c50"
        fontSize={16}
        href="/home/test_slug"
        title="Visit Dashboard"
      >
        The example site
      </a>
    </div>
    <div
      className="css-130wc7-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-bnpe5v-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="components-external-link__contents"
        >
          <span
            className="css-1hljes5-Truncated ejzgyku0"
          />
        </span>
        <span
          aria-label="(opens in a new tab)"
          className="components-external-link__icon"
        >
          ↗
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`<SitesGridItem> Custom render 2 1`] = `
<div
  className="css-lvc9r-container"
>
  <div>
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-jjnk6s-SiteName esmj6c50"
        fontSize={16}
      >
        The example site
      </a>
    </div>
    <div
      className="css-130wc7-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-bnpe5v-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="components-external-link__contents"
        >
          <span
            className="css-1hljes5-Truncated ejzgyku0"
          />
        </span>
        <span
          aria-label="(opens in a new tab)"
          className="components-external-link__icon"
        >
          ↗
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`<SitesGridItem> Default render 1`] = `
<div
  className="css-lvc9r-container"
>
  <a
    className="css-1ctre4x-ThumbnailLink e19s2eol0"
    href="/home/test_slug"
    title="Visit Dashboard"
  >
    <div
      className="site-thumbnail site-thumbnail-loading css-ut2tya-DEFAULT_CLASSNAME css-1mwzofc-siteThumbnail css-1uizeh6-disallowSelection"
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="site-thumbnail-icon"
      >
        <div
          aria-label="Site Icon"
          className="css-k8j3dg-NoIcon e1y9o06l0"
          role="img"
        >
          T
        </div>
      </div>
    </div>
  </a>
  <div>
    <div
      className="css-1xtz7v6-primaryContainer"
    >
      <a
        className="css-jjnk6s-SiteName esmj6c50"
        fontSize={16}
        href="/home/test_slug"
        title="Visit Dashboard"
      >
        The example site
      </a>
      <div
        className="css-lnphaf-badges"
      >
        <div
          className="css-1j6mrwp-EllipsisMenuContainer eke2d2q0"
        />
      </div>
    </div>
    <div
      className="css-130wc7-SitesGridItemSecondary eke2d2q1"
    >
      <a
        className="components-external-link css-bnpe5v-SiteUrl ejzgyku1"
        href=""
        onClick={[Function]}
        rel="external noreferrer noopener"
        target="_blank"
        title=""
      >
        <span
          className="components-external-link__contents"
        >
          <span
            className="css-1hljes5-Truncated ejzgyku0"
          />
        </span>
        <span
          aria-label="(opens in a new tab)"
          className="components-external-link__icon"
        >
          ↗
        </span>
      </a>
    </div>
  </div>
</div>
`;
